# sustainabot

./: .gitignore  0-AI-MANIFEST.a2ml  AI.djot  ARCHITECTURE.md  Cargo.toml  DEPLOY.md  ECOSYSTEM.scm  META.scm  README.adoc  README.md  SECURITY.md  STATE.scm  flake.nix  justfile
.github/: app.yml  dependabot.yml
.github/workflows/: casket-pages.yml  ci.yml  codeql.yml  comprehensive-quality.yml  language-policy.yml  oikos.yml  quality.yml  scorecard-enforcer.yml  scorecard.yml  security-policy.yml  wellknown-enforcement.yml  workflow-linter.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm
.machine_readable/6scm/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
analyzers/code-haskell/: eco-analyzer.cabal
analyzers/code-haskell/src/Eco/: Carbon.hs  Pareto.hs
analyzers/code-haskell/src/Types/: Metrics.hs
analyzers/docs-ocaml/: dune-project
bot-integration/: deno.json  package.json  rescript.json
bot-integration/bindings/: Deno.res  Fetch.res
bot-integration/src/: Analysis.res  Config.res  GitHubAPI.res  GitHubAPI.res.js  GitHubApp.res  GitHubApp.res.js  Main.res  Oikos.res  Report.res  Report.res.js  Router.res  Types.res  Webhook.res  index.ts  types.ts
bot-integration/src/tea/: ServerTea.res
config/: eco-bot.yaml
containers/: Containerfile  Containerfile.policy  compose.yaml  nerdctl-build.sh  prometheus.yml  vordr-build.sh
crates/sustainabot-cli/: Cargo.toml
crates/sustainabot-cli/src/: main.rs
crates/sustainabot-fleet/: Cargo.toml
crates/sustainabot-fleet/src/: lib.rs
databases/arangodb/: schema.js
databases/virtuoso/: ontology.ttl  queries.sparql
fuzz/: Cargo.toml
guix/: channels.scm  eco-bot.scm  manifest.scm
nix/: flake.nix
policy-engine/datalog/: eco_rules.dl
policy-engine/deepproblog/: eco_problog.pl
policy-engine/python/: policy_engine.py
prompts/: claude-code-instructions.md  copilot-instructions.md  pr-template.md
