# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[workspace]
resolver = "2"
members = [
    "crates/sustainabot-cli",
    "crates/sustainabot-analysis",
    "crates/sustainabot-metrics",
    "crates/sustainabot-eclexia",
    "crates/sustainabot-fleet",
]

[workspace.package]
version = "0.1.0"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
edition = "2021"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/sustainabot"

[workspace.dependencies]
# AST parsing
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process execution (for Eclexia interpreter)
tokio = { version = "1.42", features = ["full"] }

# Carbon APIs
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
