# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "sustainabot-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sustainabot"
path = "src/main.rs"

[dependencies]
sustainabot-analysis = { path = "../sustainabot-analysis" }
sustainabot-metrics = { path = "../sustainabot-metrics" }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir = "2"
